# Week2_Group4

./: DEPLOYMENT.md  IMU_data_collection.py  IMU_datastrm.ino  LICENSE  README.md  camera_capture.py  esp32_imu_ble.ino  pyproject.toml  raspberry_ble_receiver.py
Model/: DataCollection.ipynb  Group4_Task2.ipynb  MiniGolfModeltraining.ipynb  Test_Model2.py  Test_model.py  datacollection.py  fast_20251009_111759.csv  fast_20251009_111809.csv  fast_20251009_111820.csv  fast_20251009_111857.csv  fast_20251009_112253.csv  fast_20251009_112324.csv  left_20251009_112805.csv  left_20251009_112816.csv  left_20251009_112837.csv  left_20251009_112858.csv  left_20251009_112908.csv  left_20251009_112917.csv  left_20251009_112948.csv  left_20251009_113008.csv  medium_20251009_111401.csv  medium_20251009_111443.csv  medium_20251009_111552.csv  medium_20251009_111605.csv  medium_20251009_111617.csv  right_20251009_113055.csv  right_20251009_113155.csv  right_20251009_113229.csv  right_20251009_113241.csv  right_20251009_113251.csv  right_20251009_113307.csv  scaler.pkl  slow_20251009_110833.csv  slow_20251009_110941.csv  slow_20251009_111033.csv  slow_20251009_111137.csv  slow_20251009_111151.csv  slow_20251009_111202.csv  slow_20251009_111230.csv  swing_label_encoder.pkl  (+1 more)
data/: fast_20251009_111747.csv  fast_20251009_111830.csv  fast_20251009_112303.csv  fast_20251009_112313.csv  fast_20251009_112335.csv  fast_20251009_112352.csv  idle_20251009_110638.csv  idle_20251009_110714.csv  idle_20251009_110730.csv  idle_20251009_110751.csv  idle_20251009_110808.csv  left_20251009_112826.csv  (+21 more)
(+38 files in other folders)
